--- a/src/AppHost/appsettings.Development.json
+++ b/src/AppHost/appsettings.Development.json
@@ -10,8 +10,7 @@
     "Cache": "Hybrid",
     // SqlServer/PostgreSQL
     "Database": "PostgreSQL",
-    // message queue
-    "Nats": false,
-    "Qdrant": false
+    // enable multi-tenant features
+    "IsMultiTenant": false
   }
 }
