--- a/src/Perigon/Perigon.AspNetCore.Toolkit/Perigon.AspNetCore.Toolkit.csproj
+++ b/src/Perigon/Perigon.AspNetCore.Toolkit/Perigon.AspNetCore.Toolkit.csproj
@@ -1,42 +1,43 @@
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <TargetFramework>net10.0</TargetFramework>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-    <PackageId>Perigon.Web.Extension</PackageId>
-    <Title>Perigon.Web.Extension</Title>
-    <Authors>niltor</Authors>
-    <Version>1.0.0-beta7</Version>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <PackageTags>extension;webapi;framework;ater;aspnetcore;cache</PackageTags>
-    <PackageProjectUrl>https://github.com/AterDev/ater.dry.cli</PackageProjectUrl>
-    <PackageIcon>logo.jpg</PackageIcon>
-    <PackageReadmeFile>README.md</PackageReadmeFile>
-    <RepositoryUrl>https://github.com/AterDev/ater.dry.cli</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PackageReleaseNotes></PackageReleaseNotes>
-  </PropertyGroup>
-  <ItemGroup>
-    <PackageReference Include="Aspire.NATS.Net" />
-    <PackageReference Include="Aspire.Qdrant.Client" />
-    <PackageReference Include="AWSSDK.S3" />
-    <PackageReference Include="MailKit" />
-    <PackageReference Include="MiniExcel" />
-    <PackageReference Include="EPPlus" />
-    <PackageReference Include="SkiaSharp" />
-    <PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\..\..\..\logo.jpg">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-    <None Include="README.md">
-      <Pack>True</Pack>
-      <PackagePath>\</PackagePath>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Perigon.AspNetCore\Perigon.AspNetCore.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>net10.0</TargetFramework>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+		<PackageId>Perigon.AspNetCore.Toolkit</PackageId>
+		<Title>Perigon.AspNetCore.Toolkit</Title>
+		<Authors>niltor</Authors>
+		<Version>1.0.0-rc1</Version>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<PackageTags>extension;webapi;framework;ater;aspnetcore;toolkit</PackageTags>
+		<PackageProjectUrl>https://github.com/AterDev/Perigon.template</PackageProjectUrl>
+		<PackageIcon>logo.jpg</PackageIcon>
+		<PackageReadmeFile>README.md</PackageReadmeFile>
+		<RepositoryUrl>https://github.com/AterDev/Perigon.template</RepositoryUrl>
+		<RepositoryType>git</RepositoryType>
+		<PackageReleaseNotes></PackageReleaseNotes>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Aspire.NATS.Net" />
+		<PackageReference Include="Aspire.Qdrant.Client" />
+		<PackageReference Include="AWSSDK.S3" />
+		<PackageReference Include="MailKit" />
+		<PackageReference Include="MiniExcel" />
+		<PackageReference Include="EPPlus" />
+		<PackageReference Include="SkiaSharp" />
+		<PackageReference Include="SkiaSharp.NativeAssets.Linux.NoDependencies" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\logo.jpg">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+		<None Include="README.md">
+			<Pack>True</Pack>
+			<PackagePath>\</PackagePath>
+		</None>
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Perigon.AspNetCore\Perigon.AspNetCore.csproj" />
+	</ItemGroup>
 </Project>
+
