--- a/src/Services/AdminService/AdminService.csproj
+++ b/src/Services/AdminService/AdminService.csproj
@@ -10,5 +10,6 @@
     <ProjectReference Include="..\..\Perigon\Perigon.AspNetCore.SourceGeneration\Perigon.AspNetCore.SourceGeneration.csproj" OutputItemType="Analyzer" ReferenceOutputAssembly="false" />
     <ProjectReference Include="..\..\Definition\ServiceDefaults\ServiceDefaults.csproj" />
     <ProjectReference Include="..\..\Modules\SystemMod\SystemMod.csproj" />
+    <ProjectReference Include="..\..\Modules\AIAgentMod\AIAgentMod.csproj" />
   </ItemGroup>
 </Project>
